create nginx docker image

--- a/images/PROJECT/nginx/Dockerfile
+++ b/images/PROJECT/nginx/Dockerfile
@@ -1,4 +1,5 @@
 FROM        nginx
 RUN         rm -rf  /usr/share/nginx/html/*
 WORKDIR     /usr/share/nginx/html/
-RUN         curl https://studentapi-cit.s3-us-west-2.amazonaws.com/studentapp-frontend.tar.gz | tar -xz
+ADD         https://studentapi-cit.s3-us-west-2.amazonaws.com/studentapp-frontend.tar.gz /tmp/studentapp-frontend.tar.gz
+RUN         tar -xf studentapp-frontend.tar.gz && rm -f studentapp-frontend.tar.gz
