--- a/images/PROJECT/nginx/Dockerfile
+++ b/images/PROJECT/nginx/Dockerfile
@@ -3,3 +3,4 @@ RUN         rm -rf  /usr/share/nginx/html/*
 WORKDIR     /usr/share/nginx/html/
 ADD         https://studentapi-cit.s3-us-west-2.amazonaws.com/studentapp-frontend.tar.gz /tmp/studentapp-frontend.tar.gz
 RUN         tar -xf /tmp/studentapp-frontend.tar.gz && rm -f studentapp-frontend.tar.gz
+COPY        default.conf /etc/nginx/conf.d/default.conf
