--- a/images/PROJECT/tomcat/Dockerfile
+++ b/images/PROJECT/tomcat/Dockerfile
@@ -1,1 +1,4 @@
-FROM        tomact
+FROM        tomact:8.5
+ADD         https://s3-us-west-2.amazonaws.com/studentapi-cit/student.war webapps/student.war
+ADD         https://s3-us-west-2.amazonaws.com/studentapi-cit/mysql-connector.jar lib/mysql-connector.jar
+
