--- a/images/PROJECT/tomcat/Dockerfile
+++ b/images/PROJECT/tomcat/Dockerfile
@@ -1,4 +1,6 @@
 FROM    tomcat:8.5
+RUN     useradd student
+USER    student
 ADD     https://s3-us-west-2.amazonaws.com/studentapi-cit/student.war webapps/student.war
 ADD     https://s3-us-west-2.amazonaws.com/studentapi-cit/mysql-connector.jar lib/mysql-connector.jar
 COPY    context.xml conf/context.xml
